# APIServer

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  MULTI_INDEX_SEARCH.md  Makefile  OPENSEARCH.md  Procfile  README.md  __init__.py  alembic.ini  apiserver.py  application.py  cloudformation-db.yaml  cloudformation-parameters.example.json  cloudformation.yaml  compose.yaml  config.py  docker-compose.yml  entrypoint.sh  files_api_architecture.md  files_api_design.md  files_api_implementation_plan.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.ebextensions/: 01-application.config  python.config
.github/: dependabot.yml
alembic/: README.md  __init__.py  env.py
api/: __init__.py  utils.py
apiserver/: __init__.py  extensions.py
cloudformation/: cloudformation-db.yaml  cloudformation.yaml  launch_db_stack.sh  launch_stack.sh
config/: oauth_providers.yaml  vendor_ingestion.yaml
core/: __init__.py  amazon_utils.py  app_settings.py  config.py  db.py  deps.py  email.py  init_db.py  langgraph.py  lifespan.py  logger.py  models.py  opensearch.py  security.py  utils.py
docs/: AUTHENTICATION.md  CONFIGURATION.md  ER_DIAGRAM.md  FILE_MODEL.md  OAuth2_Authorization_Code_Grant_Flow.md  PIPELINES.md  QCMETRICS.md  SAMPLES_SEARCH.md  SAMPLE_RUN_ASSOCIATIONS.md  SETUP.md  WORKFLOWS.md  WORKFLOWS_AND_PIPELINES.md
plans/: Entities and Relationships Discussion.md  add-samples-to-unified-search.md  api-endpoint-for-batch-workers.md  atomic-sample-files-creation.md  barcode-to-run-id-migration.md  bulk-file-creation.md  bulk-opensearch-indexing.md  bulk-sample-run-creation.md  bulk-samples-upsert-metadata.md  collaborator-changes-analysis.md  demux-output-files-association.md  excel-file-parsing-support.md  fix-destructive-project-attribute-update.md  forward-implementation-plan.md  illumina-4digit-year-barcode-support.md  legacy-samples-search-endpoints.md  model-circular-dependency-analysis.md  model-graph-recommendations.md  model-migration-gap-analysis.md  (+23 more)
(+361 files in other folders)
