[project]
name = "ngs360-server"
version = "0.1.0"
description = "NGS360 API Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "mako>=1.3.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
